Create main & home handlebars and route for them

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,1 +1,29 @@
-{{!-- main --}}
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Tech Blog</title>
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/4f46042201.js" crossorigin="anonymous"></script>
+   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
+    {{!-- CSS --}}
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/home.css">
+  </head>
+
+  <body>
+    <nav class="navbar">
+      <h1><a class="navbar-brand px-3" href="/"><i class="fa-solid fa-clipboard-list"></i> The Tech Blog </a></h1>
+      <div class="icons">
+        <i class="fa-solid fa-floppy-disk text-light save-note"></i>
+        <i class="fa-solid fa-plus text-light new-note"></i>
+      </div>
+    </nav>
+    
+    {{!-- <script src="/assets/js/index.js"></script> --}}
+  </body>
+</html>
