--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,150 @@
-/* css */
+html,
+body {
+  font-family: 'Open Sans', sans-serif;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #FAF9F6;
+}
+
+.navbar {
+  padding: 3% 4%;
+  background-color: #1f203a;
+}
+
+.navbar-brand {
+  background-color: #FAF9F6;
+  font-size: 3rem;
+  color: #1f203a;
+  padding: 0 10px;
+  display: inline-block;
+  border-radius: .4rem;
+  box-shadow: 6px 5px #cccccc;
+  
+}
+
+.btn {
+  background-color: #F2EDDC;
+  color: black;
+  padding: 6px 5px;
+  margin: 5px 0;
+  font-size: 1.3rem;
+  text-decoration:none;
+  width: 100%;
+  display: block;
+  border-radius: .4rem;
+  border: none;
+  outline: none;
+  box-shadow: 3px 3px #1f203a;
+  transform: translate(-1px, -1px);
+}
+
+.btn:hover {
+  color: black;
+  background-color: #e5e5e5;
+  transform: translate(0, 0);
+  box-shadow: 2px 2px #1f203a;
+}
+
+.btn-inline {
+  display: inline;
+}
+
+.btn-back {
+  border-radius: .4rem;
+  color: #FAF9F6;
+  border: none;
+  outline: none;
+  background-color: #cccccc;
+  box-shadow: 3px 3px #9caea9;
+  transform: translate(-1px, -1px);
+  display: inline-block;
+  width: auto;
+  margin-top: 20px;
+  padding: 15px;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+ .btn-back:hover {
+  color: #FAF9F6;
+  background-color:  #788585;
+  transform: translate(0, 0);
+  box-shadow: 2px 2px #1f203a;
+}
+
+.save-note {
+  display: none;
+}
+
+.icons i {
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.note-textarea,
+.note-title {
+  color: #000000;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: #FAF9F6;
+}
+
+.note-textarea {
+  resize: none;
+  height: calc(100% - 63px);
+  padding-top: 15px;
+}
+
+.note-title {
+  height: 60px;
+  margin-top: 13px;
+  font-size: 3rem;
+}
+
+.note-title:read-only,
+.note-textarea:read-only {
+  color: #757575;
+}
+
+.list-container .card {
+  height: calc(100vh - 70px);
+  border-bottom: none;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  background-color: #FAF9F6;
+}
+
+.list-container {
+  padding-left: 0;
+}
+
+.list-container .list-group,
+.list-container .list-group-item:first-child,
+.list-container .card {
+  border-top: none;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+  background-color: #FAF9F6;
+}
+
+.list-item-title {
+  display: inline-block;
+  width: 75%;
+}
+
+.list-container i {
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.list-container .list-group-item {
+  background-color: #FAF9F6;;
+  border-left: none;
+  border-right: none;
+  padding: 20px;
+  cursor: pointer;
+}
