--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,20 @@
 {{!-- home.handlebars --}}
+
+<div class="container-fluid">
+      <div class="row">
+        <div class="col-4 list-container">
+          <div class="card">
+            <ul class="list-group"></ul>
+          </div>
+        </div>
+        <div class="col-8">
+          <input
+            class="note-title"
+            placeholder="Note Title"
+            maxlength="28"
+            type="text"
+          />
+          <textarea class="note-textarea" placeholder="Note Text"></textarea>
+        </div>
+      </div>
+    </div>
