--- a/public/css/join.css
+++ b/public/css/join.css
@@ -11,7 +11,10 @@
 }
 
 .card {
-   height: 100%
+   height: 100%;
+   margin-top: 50px;
+   margin-bottom: 50px;
+
 }
 
 .form-outline .form-control {
