--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,53 @@
-{{!-- login --}}
+<div class="container form-card">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card bg-white text-dark" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              <p class="text-dark-50 mb-5">Don't have an account? <a class="nav-link text-dark-50 fw-bold selected-nav-link" href="/join"><u>Create one now</a></u></p>
+              <form class="login-form">
+              <div class="form-outline form-dark mb-4">
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                <label class="form-label" for="typeEmailX">*Email</label>
+              </div>
+
+              <div class="form-outline form-dark mb-4">
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                <label class="form-label" for="typePasswordX">*Password</label>
+              </div>
+
+              <button class="btn btn-outline-dark btn-dark text-white btn-lg px-5" type="submit">Login</button>
+              </form>
+
+              {{!-- Sign with Google --}}
+              {{!-- <a href="/auth/google"><img class="googleimg card-img-top img-redirect" src="/images/btn_google_signin.png" alt="google signin">
+              </a> --}}
+
+              {{!-- <a class="google text-redirect my-signin2" href="/">
+               <div id="g_id_onload"
+                data-client_id="YOUR_GOOGLE_CLIENT_ID"
+                data-login_uri="/login"
+                data-auto_prompt="false">
+              </div>
+              <div class="g_id_signin"
+                data-type="standard"
+                data-size="large"
+                data-theme="outline"
+                data-text="sign_in_with"
+                data-shape="rectangular"
+                data-logo_alignment="left">
+              </div> --}}
+          
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+{{!-- <script src="/js/login.js"></script> --}}
