Add console.log to debug in userRoutes

--- a/views/join.handlebars
+++ b/views/join.handlebars
@@ -20,14 +20,12 @@
               </div>
 
               <div class="form-outline form-dark mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" required>
                 <label class="form-label" for="typePasswordX">*Password</label>
-               <div class="input-note">*Min. length 8 characters, must contain at least one lowercase character, one uppercase and one number.</div>
-              </div>
 
-              <button class="btn btn-outline-dark btn-dark text-white btn-lg px-5" type="submit">Create Account</button>
+              <button class="btn btn-outline-dark btn-dark btn-lg px-5" type="submit">Create Account</button>
               </form>
-            
+          
               </div>
             </div>
           </div>
