--- a/public/css/join.css
+++ b/public/css/join.css
@@ -25,8 +25,15 @@
     transition: all .2s linear;
 }
 
-.input-note {
-    font-size: 0.8rem;
-    text-align: left;
-    text-indent: 2.3%;
+.btn {
+    margin-top: 50px;
+    color: black;
 }
+
+.btn:hover {
+    color: black;
+    background-color: #e5e5e5;
+    transform: translate(0, 0);
+    box-shadow: 2px 2px #1f203a;
+}
+
