--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,14 +30,13 @@ body {
   align-items: center;
 }
 
-.navbar-nav a,
-.navbar-nav .active a {
+.navbar-nav a {
   color: white;
   padding: 0 2rem;
   font-size: 1.5rem;
 }
 
-a:hover {
+.navbar-nav a:hover {
   color: white;
 }
 
@@ -84,85 +83,9 @@ a:hover {
   font-size: 1.2rem;
 }
 
- .btn-back:hover {
-  color: #FAF9F6;
-  background-color:  #788585;
-  transform: translate(0, 0);
-  box-shadow: 2px 2px #1f203a;
-}
-
-.save-note {
-  display: none;
-}
-
-.icons i {
-  margin-left: 15px;
-  margin-right: 15px;
-  font-size: 2rem;
-  cursor: pointer;
-}
-
-.note-textarea,
-.note-title {
-  color: #000000;
-  width: 100%;
-  outline: none;
-  border: none;
-  background-color: #FAF9F6;
-}
-
-.note-textarea {
-  resize: none;
-  height: calc(100% - 63px);
-  padding-top: 15px;
-}
-
-.note-title {
-  height: 60px;
-  margin-top: 13px;
-  font-size: 3rem;
-}
-
-.note-title:read-only,
-.note-textarea:read-only {
-  color: #757575;
-}
-
-.list-container .card {
-  height: calc(100vh - 70px);
-  border-bottom: none;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-  background-color: #FAF9F6;
-}
-
-.list-container {
-  padding-left: 0;
-}
-
-.list-container .list-group,
-.list-container .list-group-item:first-child,
-.list-container .card {
-  border-top: none;
-  border-top-right-radius: 0;
-  border-top-left-radius: 0;
-  background-color: #FAF9F6;
-}
-
-.list-item-title {
-  display: inline-block;
-  width: 75%;
-}
-
-.list-container i {
-  font-size: 1.1rem;
-  cursor: pointer;
-}
-
-.list-container .list-group-item {
-  background-color: #FAF9F6;;
-  border-left: none;
-  border-right: none;
-  padding: 20px;
-  cursor: pointer;
+.btn-back:hover {
+color: #FAF9F6;
+background-color:  #788585;
+transform: translate(0, 0);
+box-shadow: 2px 2px #1f203a;
 }
