--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,1 +1,3 @@
-{{!-- dashboard --}}
+<div class="flex-container">
+ <button class="btn btn-outline-dark btn-dark btn-lg px-5" type="submit"><i class="fa-solid fa-plus"></i> New Post</button>
+</div>
