Add newpost handlebars and dashboard route

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,8 +2,8 @@
   <div class="col-auto  ">
     <h4>Welcome, {{user.username}}!</h4>
   </div>
-  <header class="hero">
-    <h1 class="app-title"><a href="/dashboard">Your Posts</a></h1>
+  <header>
+    <h1><a href="/dashboard">Your Posts</a></h1>
   </header>
 </div>
 
@@ -22,5 +22,5 @@
 </div>
 
 <div class="flex-container">
- <button class="btn-new-post btn-outline-dark btn-dark btn-lg px-5" type="submit"><i class="fa-solid fa-plus"></i> New Post</button>
+  <a href="dashboard/newpost" class="btn-new-post btn-outline-dark btn-dark btn-lg px-5"><i class="fa-solid fa-plus"></i> New Post</a>
 </div>
