--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ box-shadow: 2px 2px #1f203a;
 .flex-container {
     display: flex;
     justify-content: center;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .btn-new-post {
@@ -133,13 +133,14 @@ box-shadow: 2px 2px #1f203a;
   margin: 5px 0;
   font-size: 1.3rem;
   text-decoration:none;
-  width: 20%;
+  width: 15%;
   display: block;
   border-radius: .4rem;
   border: none;
   outline: none;
   box-shadow: 3px 3px #1f203a;
   transform: translate(-1px, -1px);
+  text-align: center;
 }
 
 .welcome {
@@ -151,4 +152,26 @@ a {
   display: block;
   color: black;
   text-decoration: none;
+}
+
+/* new post css */
+.new-post {
+  margin-top: 50px;
+}
+
+.btn-create {
+  background-color: #F2EDDC;
+  color: black;
+  padding: 6px 5px;
+  margin: 5px 0;
+  font-size: 1.3rem;
+  text-decoration:none;
+  width: 15%;
+  display: block;
+  border-radius: .4rem;
+  border: none;
+  outline: none;
+  box-shadow: 3px 3px #1f203a;
+  transform: translate(-1px, -1px);
+  text-align: center;
 }
