--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,7 +1,7 @@
 <div class="container new-post">
   <div class="card">
     <div class="card-header">
-    <h3> Create New Post</h3>
+    <h3>Create New Post</h3>
     </div>
     <div class="card-body">
       <form class="newPost">
@@ -12,7 +12,7 @@
         <br>
         <div class="form-group">
             <label for="exampleFormControlTextarea1"><h5>Contents</h5></label>
-            <textarea class="form-control" id="typeContents" rows="3"></textarea>
+            <textarea class="form-control" id="typeContents" rows="5"></textarea>
         </div>
           <button class="btn btn-outline-dark btn-dark btn-lg px-5" type="submit">Create</button>
       </form>
@@ -20,4 +20,4 @@
   </div>
 </div>
 
-<script src="/js/newpost.js"></script>
+<script src="/js/newPost.js"></script>
