Add comment functionality to post pages

--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -18,7 +18,7 @@
 </div>
 {{/if}}
 
-{{!-- {{> comments post.comments}} --}}
+{{> comments post.comment}}
 
 {{#if logged_in}}
 <script src="/js/comment.js"></script>
