--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -4,8 +4,8 @@
     <div class="card-header">
     </div>
     <div class="card-body">
-      {{comment}}
-      -{{user.name}} on {{format_date created_at}}
+      {{comment}} <br>
+      - {{user.username}} on {{format_date created_at}}
     </div>
   </div>
    {{/each}}
