--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #FAF9F6;
-  margin-bottom: 15%;
+  margin-bottom: 20%;
 }
 
 .navbar {
@@ -109,7 +109,7 @@ box-shadow: 2px 2px #1f203a;
 .card {
  height: 100%;
  margin-top: 50px;
- margin-bottom: 50px;
+ /* margin-bottom: 50px; */
 }
 
 .form-outline .form-control {
@@ -148,6 +148,12 @@ box-shadow: 2px 2px #1f203a;
   margin-top: 50px;
 }
 
+.edit-button {
+  width: 20%;
+  margin-top: 1%;
+  margin-left: 1%;
+}
+
 /* home css */
 a {
   display: block;
@@ -176,3 +182,4 @@ a {
   transform: translate(-1px, -1px);
   text-align: center;
 }
+
