--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,6 +1,26 @@
+<div class="container new-post">
+  <div class="card">
+    <div class="card-header">
+    <h3>Edit Post</h3>
+    </div>
+    <div class="card-body">
+      <form class="editPost">
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1"><h5>Title</h5></label>
+            <textarea class="form-control" id="typeTitle" value="{{post.title}}" rows="1"></textarea>
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1"><h5>Contents</h5></label>
+            <textarea class="form-control" id="typeContents" value="{{post.contents}}" rows="5"></textarea>
+        </div>
+          <button class="btn btn-outline-dark btn-dark btn-lg px-5" type="submit">Update Post</button>
+          <button class="btn btn-outline-dark btn-dark btn-lg px-5" type="button">Delete</button>
+      </form>
+    </div>
+  </div>
+</div>
 
 
-
-{{!-- 
 <script src="/js/editPost.js"></script>
-<script src="/js/deletePost.js"></script> --}}
+{{!-- <script src="/js/deletePost.js"></script> --}}
