--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 
   <body>
     <nav class="navbar">
-      <h1><a class="navbar-brand px-3" href="/"><i class="fa-solid fa-pen-to-square"></i> The Tech Blog </a></h1>
+      <h1><a class="navbar-brand px-3" href="/"><i class="fa-solid fa-blog"></i> The Tech Blog </a></h1>
       <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
        
           <li class="nav-item text-light active">
