--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -18,7 +18,7 @@
         <div class="form-group">
             <textarea class="form-control" id="typeContents" rows="5">{{post.contents}}</textarea>
         </div>
-          <button class="btn btn-outline-dark btn-dark btn-lg px-5" id="editPost" type="submit">Update Post</button>
+          <button class="btn btn-outline-dark btn-dark btn-lg px-5" id="editPost" type="submit">Update</button>
           <button class="btn btn-outline-dark btn-dark btn-lg px-5" id="deleteButton" type="button" id="deletePost">Delete</button>
       </form>
     </div>
