--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,11 +130,11 @@ box-shadow: 2px 2px #1f203a;
 .btn-new-post {
   background-color: #F2EDDC;
   color: black;
-  padding: 6px 5px;
-  margin: 5px 0;
-  font-size: 1.3rem;
+  /* padding: 6px 5px; */
+  margin: 20px 0;
+  font-size: 1.5rem;
   text-decoration:none;
-  width: 15%;
+  width: 20%;
   display: block;
   border-radius: .4rem;
   border: none;
