--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -2,7 +2,8 @@
     {{#each this}}
   <div class="card">
     <div class="card-body">
-     <a href="/comments/{{id}}"> {{comment}}</a> <br>
+      {{!-- <a href="/comments/{{id}}"> {{comment}}</a> --}}
+     {{comment}} <br>
       - {{user.username}} on {{format_date created_at}}
     </div>
   </div>
