--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,14 +166,15 @@ margin-bottom: -2%;
 .your-comments-card {
   margin-bottom: 1%;
 }
-/* home css */
+
+/* Home css */
 a {
   display: block;
   color: black;
   text-decoration: none;
 }
 
-/* new post css */
+/* New post css */
 .new-post {
   margin-top: 50px;
 }
@@ -194,4 +195,3 @@ a {
   transform: translate(-1px, -1px);
   text-align: center;
 }
-
