--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,3 +1,9 @@
+<div class="container welcome">
+   <header>
+    <h4><a href="/dashboard"><i class="fa-solid fa-arrow-left"></i> Back to Dashboard</h4></a>
+  </header>
+  </div>
+
 <div class="container new-post">
   <div class="card">
     <div class="card-header">
